<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/welcome_screen_bg"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/logo"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
        app:layout_constraintVertical_bias=".1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="match_parent"
        android:layout_height="735dp"
        app:layout_constraintVertical_bias="0"
        android:contentDescription="@string/this_backgroud_image_of_welcome_screen"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/bg_welcome_screen" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/view_bg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent=".68"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1">

        <ImageView
            android:id="@+id/icon_in_base"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/icon"
            app:layout_constraintBottom_toTopOf="@+id/bold_quotes"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/bold_quotes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bold_quotes"
            android:textAlignment="center"
            android:textColor="@color/text_primary"
            android:textSize="34sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/quotes"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/icon_in_base" />

        <TextView
            android:id="@+id/quotes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="33dp"
            android:paddingEnd="33dp"
            android:text="@string/quotes"
            android:textAlignment="center"
            android:textColor="@color/text_secondary"
            android:textSize="17sp"
            app:layout_constraintBottom_toTopOf="@+id/google_login"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bold_quotes" />

        <Button
            android:id="@+id/google_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="40dp"
            android:paddingTop="10dp"
            android:paddingEnd="40dp"
            android:paddingBottom="10dp"
            android:text="@string/continue_with_google"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/give_a_try"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/quotes" />

        <TextView
            android:id="@+id/give_a_try"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/give_a_try"
            android:textStyle="bold"
            android:textSize="17sp"
            android:textColor="@color/text_secondary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/google_login" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
